--- a/css/main2.css
+++ b/css/main2.css
@@ -37,7 +37,6 @@ h1 p {
 
 h1 div {
   float: right;
-  border: 1px solid;
   margin: 5px;
   margin-top: 13px;
   border-radius: 10px;
@@ -67,6 +66,7 @@ h1 div {
 
 .score {
   width: 80px;
+  font-size: 20px;
 }
 
 .row {
@@ -178,6 +178,13 @@ h1 div {
 
 .stopPlayingBoard {
   background: #911107;
+}
+
+.stopPlayingBoard2 {
+  background: #911107;
+  padding-top: 30px;
+  font-size: 80px;
+  color: white;
 }
 
 /*@media (min-width: 768px) {
